projetParser.java
// $ANTLR 3.5.2 projet.g 2016-03-03 10:04:35
           
    import java.io.IOException;
    import java.io.DataInputStream;
    import java.io.FileInputStream;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class projetParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "ML_COMMENT", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "':'", "':='", "';'", 
		"'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'alors'", "'aut'", "'bool'", 
		"'cond'", "'const'", "'debut'", "'def'", "'div'", "'ecrire'", "'ent'", 
		"'et'", "'faire'", "'fait'", "'faux'", "'fcond'", "'fin'", "'fixe'", "'fsi'", 
		"'lire'", "'mod'", "'module'", "'non'", "'ou'", "'proc'", "'programme'", 
		"'ref'", "'si'", "'sinon'", "'ttq'", "'var'", "'vrai'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int ML_COMMENT=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projetParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "projet.g"; }


	    // variables globales et méthodes utiles à placer ici



	// $ANTLR start "unite"
	// projet.g:29:1: unite : ( unitprog EOF | unitmodule EOF );
	public final void unite() throws RecognitionException {
		try {
			// projet.g:29:12: ( unitprog EOF | unitmodule EOF )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==48) ) {
				alt1=1;
			}
			else if ( (LA1_0==44) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// projet.g:29:14: unitprog EOF
					{
					pushFollow(FOLLOW_unitprog_in_unite61);
					unitprog();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite63); 
					}
					break;
				case 2 :
					// projet.g:29:29: unitmodule EOF
					{
					pushFollow(FOLLOW_unitmodule_in_unite67);
					unitmodule();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite70); 
					}
					break;

			}
		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unite"



	// $ANTLR start "unitprog"
	// projet.g:30:1: unitprog : 'programme' ident ':' declarations corps ;
	public final void unitprog() throws RecognitionException {
		try {
			// projet.g:30:12: ( 'programme' ident ':' declarations corps )
			// projet.g:30:14: 'programme' ident ':' declarations corps
			{
			match(input,48,FOLLOW_48_in_unitprog79); 
			pushFollow(FOLLOW_ident_in_unitprog81);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitprog83); 
			pushFollow(FOLLOW_declarations_in_unitprog85);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_corps_in_unitprog102);
			corps();
			state._fsp--;

			 PtGen.pt(666); System.out.println("succès, arret de la compilation "); 
			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitprog"



	// $ANTLR start "unitmodule"
	// projet.g:32:1: unitmodule : 'module' ident ':' declarations ;
	public final void unitmodule() throws RecognitionException {
		try {
			// projet.g:32:12: ( 'module' ident ':' declarations )
			// projet.g:32:14: 'module' ident ':' declarations
			{
			match(input,44,FOLLOW_44_in_unitmodule111); 
			pushFollow(FOLLOW_ident_in_unitmodule113);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitmodule115); 
			pushFollow(FOLLOW_declarations_in_unitmodule117);
			declarations();
			state._fsp--;

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitmodule"



	// $ANTLR start "declarations"
	// projet.g:34:1: declarations : ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? ;
	public final void declarations() throws RecognitionException {
		try {
			// projet.g:34:14: ( ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? )
			// projet.g:34:16: ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )?
			{
			// projet.g:34:16: ( partiedef )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==30) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// projet.g:34:16: partiedef
					{
					pushFollow(FOLLOW_partiedef_in_declarations125);
					partiedef();
					state._fsp--;

					}
					break;

			}

			// projet.g:34:27: ( partieref )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==49) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// projet.g:34:27: partieref
					{
					pushFollow(FOLLOW_partieref_in_declarations128);
					partieref();
					state._fsp--;

					}
					break;

			}

			// projet.g:34:38: ( consts )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==28) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// projet.g:34:38: consts
					{
					pushFollow(FOLLOW_consts_in_declarations131);
					consts();
					state._fsp--;

					}
					break;

			}

			// projet.g:34:46: ( vars )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==53) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// projet.g:34:46: vars
					{
					pushFollow(FOLLOW_vars_in_declarations134);
					vars();
					state._fsp--;

					}
					break;

			}

			// projet.g:34:52: ( decprocs )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==47) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// projet.g:34:52: decprocs
					{
					pushFollow(FOLLOW_decprocs_in_declarations137);
					decprocs();
					state._fsp--;

					}
					break;

			}

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "partiedef"
	// projet.g:35:1: partiedef : 'def' ident ( ',' ident )* ptvg ;
	public final void partiedef() throws RecognitionException {
		try {
			// projet.g:35:14: ( 'def' ident ( ',' ident )* ptvg )
			// projet.g:35:16: 'def' ident ( ',' ident )* ptvg
			{
			match(input,30,FOLLOW_30_in_partiedef148); 
			pushFollow(FOLLOW_ident_in_partiedef150);
			ident();
			state._fsp--;

			// projet.g:35:29: ( ',' ident )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==13) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// projet.g:35:30: ',' ident
					{
					match(input,13,FOLLOW_13_in_partiedef154); 
					pushFollow(FOLLOW_ident_in_partiedef156);
					ident();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partiedef161);
			ptvg();
			state._fsp--;

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partiedef"



	// $ANTLR start "partieref"
	// projet.g:36:1: partieref : 'ref' specif ( ',' specif )* ptvg ;
	public final void partieref() throws RecognitionException {
		try {
			// projet.g:36:14: ( 'ref' specif ( ',' specif )* ptvg )
			// projet.g:36:16: 'ref' specif ( ',' specif )* ptvg
			{
			match(input,49,FOLLOW_49_in_partieref171); 
			pushFollow(FOLLOW_specif_in_partieref174);
			specif();
			state._fsp--;

			// projet.g:36:30: ( ',' specif )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==13) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// projet.g:36:31: ',' specif
					{
					match(input,13,FOLLOW_13_in_partieref177); 
					pushFollow(FOLLOW_specif_in_partieref179);
					specif();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partieref183);
			ptvg();
			state._fsp--;

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partieref"



	// $ANTLR start "specif"
	// projet.g:37:1: specif : ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? ;
	public final void specif() throws RecognitionException {
		try {
			// projet.g:37:14: ( ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? )
			// projet.g:37:16: ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )?
			{
			pushFollow(FOLLOW_ident_in_specif196);
			ident();
			state._fsp--;

			// projet.g:37:22: ( 'fixe' '(' type ( ',' type )* ')' )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==40) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// projet.g:37:24: 'fixe' '(' type ( ',' type )* ')'
					{
					match(input,40,FOLLOW_40_in_specif200); 
					match(input,9,FOLLOW_9_in_specif202); 
					pushFollow(FOLLOW_type_in_specif204);
					type();
					state._fsp--;

					// projet.g:37:40: ( ',' type )*
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==13) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// projet.g:37:42: ',' type
							{
							match(input,13,FOLLOW_13_in_specif208); 
							pushFollow(FOLLOW_type_in_specif210);
							type();
							state._fsp--;

							}
							break;

						default :
							break loop9;
						}
					}

					match(input,10,FOLLOW_10_in_specif216); 
					}
					break;

			}

			// projet.g:38:22: ( 'mod' '(' type ( ',' type )* ')' )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==43) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// projet.g:38:24: 'mod' '(' type ( ',' type )* ')'
					{
					match(input,43,FOLLOW_43_in_specif245); 
					match(input,9,FOLLOW_9_in_specif248); 
					pushFollow(FOLLOW_type_in_specif250);
					type();
					state._fsp--;

					// projet.g:38:40: ( ',' type )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==13) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// projet.g:38:42: ',' type
							{
							match(input,13,FOLLOW_13_in_specif254); 
							pushFollow(FOLLOW_type_in_specif256);
							type();
							state._fsp--;

							}
							break;

						default :
							break loop11;
						}
					}

					match(input,10,FOLLOW_10_in_specif262); 
					}
					break;

			}

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "specif"



	// $ANTLR start "consts"
	// projet.g:39:1: consts : 'const' ( ident '=' valeur ptvg )+ ;
	public final void consts() throws RecognitionException {
		try {
			// projet.g:39:14: ( 'const' ( ident '=' valeur ptvg )+ )
			// projet.g:39:16: 'const' ( ident '=' valeur ptvg )+
			{
			match(input,28,FOLLOW_28_in_consts278); 
			// projet.g:39:24: ( ident '=' valeur ptvg )+
			int cnt13=0;
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( (LA13_0==ID) ) {
					alt13=1;
				}

				switch (alt13) {
				case 1 :
					// projet.g:39:26: ident '=' valeur ptvg
					{
					pushFollow(FOLLOW_ident_in_consts282);
					ident();
					state._fsp--;

					 PtGen.pt(299); PtGen.pt(200); 
					match(input,21,FOLLOW_21_in_consts286); 
					pushFollow(FOLLOW_valeur_in_consts288);
					valeur();
					state._fsp--;

					 PtGen.pt(205); 
					pushFollow(FOLLOW_ptvg_in_consts292);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt13 >= 1 ) break loop13;
					EarlyExitException eee = new EarlyExitException(13, input);
					throw eee;
				}
				cnt13++;
			}

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "consts"



	// $ANTLR start "vars"
	// projet.g:40:1: vars : 'var' ( type ident ( ',' ident )* ptvg )+ ;
	public final void vars() throws RecognitionException {
		try {
			// projet.g:40:14: ( 'var' ( type ident ( ',' ident )* ptvg )+ )
			// projet.g:40:16: 'var' ( type ident ( ',' ident )* ptvg )+
			{
			match(input,53,FOLLOW_53_in_vars310); 
			// projet.g:40:22: ( type ident ( ',' ident )* ptvg )+
			int cnt15=0;
			loop15:
			while (true) {
				int alt15=2;
				int LA15_0 = input.LA(1);
				if ( (LA15_0==26||LA15_0==33) ) {
					alt15=1;
				}

				switch (alt15) {
				case 1 :
					// projet.g:40:24: type ident ( ',' ident )* ptvg
					{
					pushFollow(FOLLOW_type_in_vars314);
					type();
					state._fsp--;

					pushFollow(FOLLOW_ident_in_vars316);
					ident();
					state._fsp--;

					 PtGen.pt(299); PtGen.pt(201); 
					// projet.g:41:22: ( ',' ident )*
					loop14:
					while (true) {
						int alt14=2;
						int LA14_0 = input.LA(1);
						if ( (LA14_0==13) ) {
							alt14=1;
						}

						switch (alt14) {
						case 1 :
							// projet.g:41:24: ',' ident
							{
							match(input,13,FOLLOW_13_in_vars343); 
							pushFollow(FOLLOW_ident_in_vars346);
							ident();
							state._fsp--;

							 PtGen.pt(299); PtGen.pt(201); 
							}
							break;

						default :
							break loop14;
						}
					}

					pushFollow(FOLLOW_ptvg_in_vars353);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt15 >= 1 ) break loop15;
					EarlyExitException eee = new EarlyExitException(15, input);
					throw eee;
				}
				cnt15++;
			}

			 PtGen.pt(202); 
			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "vars"



	// $ANTLR start "type"
	// projet.g:42:1: type : ( 'ent' | 'bool' );
	public final void type() throws RecognitionException {
		try {
			// projet.g:42:14: ( 'ent' | 'bool' )
			int alt16=2;
			int LA16_0 = input.LA(1);
			if ( (LA16_0==33) ) {
				alt16=1;
			}
			else if ( (LA16_0==26) ) {
				alt16=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}

			switch (alt16) {
				case 1 :
					// projet.g:42:16: 'ent'
					{
					match(input,33,FOLLOW_33_in_type373); 
					 PtGen.pt(2); 
					}
					break;
				case 2 :
					// projet.g:42:41: 'bool'
					{
					match(input,26,FOLLOW_26_in_type379); 
					 PtGen.pt(3); 
					}
					break;

			}
		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "decprocs"
	// projet.g:44:1: decprocs : ( decproc ptvg )+ ;
	public final void decprocs() throws RecognitionException {
		try {
			// projet.g:44:10: ( ( decproc ptvg )+ )
			// projet.g:44:12: ( decproc ptvg )+
			{
			 PtGen.pt(308); PtGen.pt(304); 
			// projet.g:44:46: ( decproc ptvg )+
			int cnt17=0;
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( (LA17_0==47) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// projet.g:44:47: decproc ptvg
					{
					pushFollow(FOLLOW_decproc_in_decprocs392);
					decproc();
					state._fsp--;

					pushFollow(FOLLOW_ptvg_in_decprocs394);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt17 >= 1 ) break loop17;
					EarlyExitException eee = new EarlyExitException(17, input);
					throw eee;
				}
				cnt17++;
			}

			 PtGen.pt(305); 
			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decprocs"



	// $ANTLR start "decproc"
	// projet.g:45:1: decproc : 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps ;
	public final void decproc() throws RecognitionException {
		try {
			// projet.g:45:10: ( 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps )
			// projet.g:45:12: 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps
			{
			match(input,47,FOLLOW_47_in_decproc406); 
			pushFollow(FOLLOW_ident_in_decproc408);
			ident();
			state._fsp--;

			 PtGen.pt(203); 
			// projet.g:45:44: ( parfixe )?
			int alt18=2;
			int LA18_0 = input.LA(1);
			if ( (LA18_0==40) ) {
				alt18=1;
			}
			switch (alt18) {
				case 1 :
					// projet.g:45:44: parfixe
					{
					pushFollow(FOLLOW_parfixe_in_decproc412);
					parfixe();
					state._fsp--;

					}
					break;

			}

			// projet.g:45:53: ( parmod )?
			int alt19=2;
			int LA19_0 = input.LA(1);
			if ( (LA19_0==43) ) {
				alt19=1;
			}
			switch (alt19) {
				case 1 :
					// projet.g:45:53: parmod
					{
					pushFollow(FOLLOW_parmod_in_decproc415);
					parmod();
					state._fsp--;

					}
					break;

			}

			// projet.g:45:61: ( consts )?
			int alt20=2;
			int LA20_0 = input.LA(1);
			if ( (LA20_0==28) ) {
				alt20=1;
			}
			switch (alt20) {
				case 1 :
					// projet.g:45:61: consts
					{
					pushFollow(FOLLOW_consts_in_decproc418);
					consts();
					state._fsp--;

					}
					break;

			}

			// projet.g:45:69: ( vars )?
			int alt21=2;
			int LA21_0 = input.LA(1);
			if ( (LA21_0==53) ) {
				alt21=1;
			}
			switch (alt21) {
				case 1 :
					// projet.g:45:69: vars
					{
					pushFollow(FOLLOW_vars_in_decproc421);
					vars();
					state._fsp--;

					}
					break;

			}

			 PtGen.pt(204); 
			pushFollow(FOLLOW_corps_in_decproc426);
			corps();
			state._fsp--;

			 PtGen.pt(208); 
			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decproc"



	// $ANTLR start "ptvg"
	// projet.g:46:1: ptvg : ( ';' |);
	public final void ptvg() throws RecognitionException {
		try {
			// projet.g:46:10: ( ';' |)
			int alt22=2;
			int LA22_0 = input.LA(1);
			if ( (LA22_0==17) ) {
				alt22=1;
			}
			else if ( (LA22_0==EOF||LA22_0==ID||LA22_0==26||(LA22_0 >= 28 && LA22_0 <= 29)||LA22_0==33||LA22_0==47||LA22_0==49||LA22_0==53) ) {
				alt22=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 22, 0, input);
				throw nvae;
			}

			switch (alt22) {
				case 1 :
					// projet.g:46:12: ';'
					{
					match(input,17,FOLLOW_17_in_ptvg439); 
					}
					break;
				case 2 :
					// projet.g:46:17: 
					{
					}
					break;

			}
		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ptvg"



	// $ANTLR start "parfixe"
	// projet.g:47:1: parfixe : 'fixe' '(' pf ( ';' pf )* ')' ;
	public final void parfixe() throws RecognitionException {
		try {
			// projet.g:47:10: ( 'fixe' '(' pf ( ';' pf )* ')' )
			// projet.g:47:12: 'fixe' '(' pf ( ';' pf )* ')'
			{
			match(input,40,FOLLOW_40_in_parfixe449); 
			match(input,9,FOLLOW_9_in_parfixe451); 
			pushFollow(FOLLOW_pf_in_parfixe453);
			pf();
			state._fsp--;

			// projet.g:47:26: ( ';' pf )*
			loop23:
			while (true) {
				int alt23=2;
				int LA23_0 = input.LA(1);
				if ( (LA23_0==17) ) {
					alt23=1;
				}

				switch (alt23) {
				case 1 :
					// projet.g:47:28: ';' pf
					{
					match(input,17,FOLLOW_17_in_parfixe457); 
					pushFollow(FOLLOW_pf_in_parfixe459);
					pf();
					state._fsp--;

					}
					break;

				default :
					break loop23;
				}
			}

			match(input,10,FOLLOW_10_in_parfixe463); 
			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "parfixe"



	// $ANTLR start "pf"
	// projet.g:48:1: pf : type ident ( ',' ident )* ;
	public final void pf() throws RecognitionException {
		try {
			// projet.g:48:10: ( type ident ( ',' ident )* )
			// projet.g:48:12: type ident ( ',' ident )*
			{
			pushFollow(FOLLOW_type_in_pf476);
			type();
			state._fsp--;

			pushFollow(FOLLOW_ident_in_pf478);
			ident();
			state._fsp--;

			 PtGen.pt(299); PtGen.pt(206); 
			// projet.g:48:57: ( ',' ident )*
			loop24:
			while (true) {
				int alt24=2;
				int LA24_0 = input.LA(1);
				if ( (LA24_0==13) ) {
					alt24=1;
				}

				switch (alt24) {
				case 1 :
					// projet.g:48:59: ',' ident
					{
					match(input,13,FOLLOW_13_in_pf484); 
					pushFollow(FOLLOW_ident_in_pf486);
					ident();
					state._fsp--;

					 PtGen.pt(299); PtGen.pt(206); 
					}
					break;

				default :
					break loop24;
				}
			}

			}

		}

		    catch (RecognitionException e) {reportError (e); throw e;}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "pf"


